[gd_scene load_steps=5 format=2]

[ext_resource path="res://map/map.gd" type="Script" id=1]
[ext_resource path="res://map/map_env.tres" type="Environment" id=2]
[ext_resource path="res://addons/Godot-Touch-Input-Manager/input_detection.tscn" type="PackedScene" id=3]

[sub_resource type="PlaneShape" id=1]

[node name="map" type="Node"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="holder" type="Spatial" parent="."]

[node name="input_detection" parent="." instance=ExtResource( 3 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shadow_enabled = true
directional_shadow_mode = 0

[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
[connection signal="any_gesture" from="input_detection" to="." method="_on_input_detection_any_gesture"]
